# crewai-guardrails

./: .env.example  README.md
crewai_guard/: pyproject.toml
crewai_guard/src/crew_nv1/: main.py  with-hub.py
crewai_guard/src/crew_nv2/: main.py  with-hub.py
crewai_guard/src/crew_nv3/: main.py  with-hub.py
crewai_guard/src/crew_nv4/: main.py
crewai_guard/src/crew_nv5/: custom_tool.py  main.py  teste_tool.py
